# oe_locateanything

./: .gitignore  README.md  README.zh-CN.md
docs/: BUILD_STATUS.md  CALIBRATION.md  KNOWN_ISSUES.md  (+4 more)
main/language/leap_llm_src/: pyproject.toml
main/language/leap_llm_src/leap_llm/apis/: oellm_build.py  verifier_cli.py
main/language/leap_llm_src/leap_llm/apis/calibration/: mmstar_process.py
main/language/leap_llm_src/leap_llm/apis/model/: deepseek.py  internvl_1b.py  internvl_2b.py  model_factory.py  qwen2_5_omni.py  qwen2_5_vl.py  whisper.py
main/language/leap_llm_src/leap_llm/apis/verifier/: comparison_reporter.py  internvl3_5_wrappers.py
main/language/leap_llm_src/leap_llm/models/Spirit_v1_5/: model_vlm.py  spirit_utils.py
main/language/leap_llm_src/leap_llm/models/Spirit_v1_5/blocks/: dit_feedforward.py  text_mlp.py
main/language/leap_llm_src/leap_llm/models/deepseek/blocks/: mlp.py  transformer_block.py
main/language/leap_llm_src/leap_llm/models/eagle3/: model.py
main/language/leap_llm_src/leap_llm/models/eagle3/blocks/: __init__.py  attention.py  mlp.py
main/language/leap_llm_src/leap_llm/models/gemma4_e2b/blocks/: audio_attention.py  audio_pos_embedding.py  linear.py  text_attention.py  vision_encoder.py  vision_mlp.py  vision_patch_embedding.py  vision_pooler.py  vision_rotary_embedding.py
main/language/leap_llm_src/leap_llm/models/internvl3_5/: configuration.py
main/language/leap_llm_src/leap_llm/models/internvl3_5/blocks/: __init__.py
main/language/leap_llm_src/leap_llm/models/internvl_2b/: model.py
main/language/leap_llm_src/leap_llm/models/pi0/blocks/: __init__.py  attention.py  configuration_paligemma.py  mlp.py  rmsnorm.py
main/language/leap_llm_src/leap_llm/models/pi05/: model_siglip.py
main/language/leap_llm_src/leap_llm/models/pi05/blocks/: configuration_paligemma.py  mlp.py
main/language/leap_llm_src/leap_llm/models/qwen2_5_vl/: model.py
main/language/leap_llm_src/leap_llm/models/qwen2_5_vl/blocks/: transformer_block.py
main/language/leap_llm_src/leap_llm/models/qwen3/blocks/: attention.py  transformer_block.py
main/language/leap_llm_src/leap_llm/models/qwen3_vl/blocks/: text_attention.py  text_block.py  text_rotary_emb.py  vision_mlp.py
main/language/leap_llm_src/leap_llm/models/qwen3_vl/config/: qwen3_vl_4b_instruct.py
main/language/leap_llm_src/leap_llm/models/qwen3_vl/utils/: visual_utils.py
main/language/leap_llm_src/leap_llm/models/smolvla/: __init__.py  model_action_expert.py  smolvla_utils.py  weight_mapper.py
main/language/leap_llm_src/leap_llm/models/smolvla/blocks/: __init__.py  rmsnorm.py  vision_connector.py
main/language/leap_llm_src/leap_llm/nn/: utils.py
main/language/leap_llm_src/leap_llm/nn/modules/: const_fake_quant.py  layer_norm.py  linear.py
main/language/leap_llm_src/llm_compression/converters/: calib_converter.py  compile_converter.py  hbm_rpc_eval_converter.py
main/language/leap_llm_src/llm_compression/datasets/: __init__.py
main/language/leap_llm_src/llm_compression/datasets/llm/: bfcl_handler.py  gguf_handler.py  longbench.py  longbench_v2.py  mmlu.py  mrcr.py
main/language/leap_llm_src/llm_compression/datasets/vlm/: mmbench.py
main/language/leap_llm_src/llm_compression/ir_modules/: hbir_module.py  ir_module.py
main/language/leap_llm_src/llm_compression/models/: base_qmodel.py  generate_utils.py
main/language/leap_llm_src/llm_compression/models/eagle3/: __init__.py  eagle3_generate.py  model.py
main/language/leap_llm_src/llm_compression/models/gemma4_moe/: __init__.py  gemma4_moe_model.py  process_utils.py
main/language/leap_llm_src/llm_compression/models/gemma4_moe/blocks/: __init__.py  attention.py
main/language/leap_llm_src/llm_compression/models/horizon_modules/: __init__.py
main/language/leap_llm_src/llm_compression/models/internvl3_5_1b/blocks/: __init__.py  mlp.py  transformer_block.py
main/language/leap_llm_src/llm_compression/models/internvl_1b/: __init__.py  model.py
main/language/leap_llm_src/llm_compression/models/internvl_1b/blocks/: mlp.py  transformer_block.py
main/language/leap_llm_src/llm_compression/models/internvl_2b/: __init__.py  internvl_2b_model.py  model.py
main/language/leap_llm_src/llm_compression/models/internvl_2b/blocks/: attention.py  transformer_block.py
main/language/leap_llm_src/llm_compression/models/qwen2_5_vl/: model.py  qwen2_5_vl_model.py
main/language/leap_llm_src/llm_compression/models/qwen2_5_vl/blocks/: mlp.py  transformer_block.py  vision_embedding.py
main/language/leap_llm_src/llm_compression/models/qwen3/: __init__.py  qwen3_model.py
main/language/leap_llm_src/llm_compression/models/qwen3/blocks/: __init__.py  mlp.py
main/language/leap_llm_src/llm_compression/models/qwen3_5/: model.py
main/language/leap_llm_src/llm_compression/models/qwen3_5/blocks/: __init__.py  linear_attention.py  mlp.py  transformer_block.py  vision_block.py
main/language/leap_llm_src/llm_compression/models/qwen3_5_moe/: __init__.py  process_utils.py  qwen3_5_moe_model.py
main/language/leap_llm_src/llm_compression/models/qwen3_moe/: process_utils.py  qwen3_moe_model.py
main/language/leap_llm_src/llm_compression/models/qwen3_vl/: process_utils.py
main/language/leap_llm_src/llm_compression/utils/: __init__.py
main/language/leap_llm_src/scm/tools/: outside_ftp_sync.py
main/language/leap_llm_src/scm/tools/scheduler/: scheduler.py  utils.py
main/runtime/: CMakeLists.txt  run_vision_dummy_test.sh
main/runtime/docs/: INFERENCE_FLOW.md
main/runtime/example/: attention_mask_test.cpp  embed_lookup_test.cpp  layout_probe.cpp  prefill_verify.cpp  prefill_verify_v3.cpp  vision_dummy_test.cpp
main/runtime/include/locateanything_runtime/: embed_lookup.hpp  hbm_session.hpp  image_preprocess.hpp
main/runtime/reference/HB_HBMRuntime/: README.md
main/runtime/reference/oellm_runtime/: README.md  build_vlm.sh  qwen2.5vl_3b_config.json  run_vlm.sh  vlm_demo.cc  vlm_demo_CMakeLists.txt  xlm.h
main/runtime/reference/upstream_la/: README.md
main/runtime/src/: embed_lookup.cpp  hbm_session.cpp  image_preprocess.cpp
(+222 files in other folders)
